syntax = "proto3";

package WeatherSensors.Service.Protos;

option csharp_namespace = "WeatherSensors.Service.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service SensorEventGenerator {
	rpc GetSensors(google.protobuf.Empty) returns (GetSensorsResponse);
	rpc SensorEventStream(stream SensorEventRequest) returns (stream SensorEventResponse);
}

message GetSensorsResponse {
	repeated string sensors = 1;
}

message SensorEventRequest {
	SensorEventCommand command = 1;
	repeated string sensors = 2;
}

message SensorEventResponse {
	string sensor = 1;
	double temperature = 2;
	int32 humidity = 3;
	int32 carbon_dioxide_level = 4;
	google.protobuf.Timestamp created_at = 5;
}

enum SensorEventCommand {
	SUBSCRIBE = 0;
	SUBSCRIBE_ALL = 1;
	UNSUBSCRIBE = 2;
	UNSUBSCRIBE_ALL = 3;
}